# hoplite

./: .gitignore  Cargo.toml  README_TUNING.md  params.json
.github/workflows/: release.yml
benches/: perft.rs
examples/: infinite_stop.rs
github/workflows/: rust.yml
src/: board.rs  endgame.rs  eval.rs  lib.rs  main.rs  movecache.rs  movegen.rs  nnue.rs  params.rs  perft.rs  search.rs  search.rs.bak  tt.rs  types.rs  uci.rs  zobrist.rs
tests/: perft.rs  search_time.rs  uci_missing_nnue.rs
